  no replacement. It will be removed on or after 2011-10-01.`
* Fix handling of files with no trailing newline when putting annotations at
  the end of the file.
* Now works on tables with no primary key.
* Add --format=markdown option
* "Table name" annotation (if table name is different from model name)
* "Human name" annotation (enabling translation to non-English locales)

== 2.4.2 2009-11-21

* Annotates (spec|test)/factories/<model>_factory.rb files

== 2.4.1 2009-11-20

* Annotates thoughtbot's factory_girl factories (test/factories/<model>_factory.rb)
* Move default annotation position back to top

== 2.4.0 2009-12-13

* Incorporated lots of patches from the Github community, including support for Blueprints fixtures
* Several bug fixes

== 2.1 2009-10-18

* New options
  * -R to require additional files before loading the models
  * -i to show database indexes in annotations
  * -e to exclude annotating tests or fixtures
  * -m to include the migration version number in the annotation
  * --model-dir to annotate model files stored a different place than app/models
* Ignore unknown macros ('acts_as_whatever')

== 2.0 2009-02-03

* Add annotate_models plugin fork additions
  * Annotates Rspec and Test Unit models
  * Annotates Object Daddy exemplars
  * Annotates geometrical columns
* Add AnnotateRoutes rake task
* Up gem structure to newgem defaults

== 1.0.4 2008-09-04

* Only update modified models since last run, thanks to sant0sk1

== 1.0.3 2008-05-02

* Add misc changes from Dustin Sallings and Henrik N
  * Remove trailing whitespace
  * More intuitive info messages
  * Update README file with update-to-date example

== 1.0.2 2008-03-22

* Add contributions from Michael Bumann (http://github.com/bumi)
  * added an option "position" to choose to put the annotation,
  * spec/fixtures now also get annotated
  * added a task to remove the annotations
  * these options can be specified from command line as -d and -p [before|after]